# Learn_Divine_Speed

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  PRD.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/diagnostic/: page.tsx
frontend/src/app/lesson/[conceptId]/: page.tsx
frontend/src/app/syllabus/: page.tsx
frontend/src/components/editor/: SandboxEditor.tsx
libs/shared/: pyproject.toml
libs/shared/src/lgs_shared/: config.py
libs/shared/src/lgs_shared/models/: __init__.py  llm.py  retrieval.py  sandbox.py  session.py  syllabus.py
migrations/: alembic.ini  env.py
migrations/versions/: 0001_init_schema.py
services/api_gateway/: Dockerfile  pyproject.toml
services/api_gateway/src/api_gateway/: main.py
services/api_gateway/src/api_gateway/clients/: orchestrator_client.py
services/api_gateway/src/api_gateway/routers/: diagnostic.py  lesson.py  session.py  submission.py
services/doc_ingestion_worker/: Dockerfile  pyproject.toml
services/doc_ingestion_worker/src/doc_ingestion_worker/: run.py  sources.yaml
services/doc_ingestion_worker/src/doc_ingestion_worker/adapters/: api_adapter.py  base.py  github_markdown_adapter.py  llms_txt_adapter.py  package_metadata_adapter.py  scrape_adapter.py
services/doc_ingestion_worker/src/doc_ingestion_worker/pipeline/: chunk_tag.py  dedup.py  embed.py  eval_check.py  extract.py  fetch.py  publish.py  render.py  validate.py
services/llm_router/: Dockerfile  pyproject.toml
services/llm_router/src/llm_router/: config_loader.py  main.py  routing.yaml
services/llm_router/src/llm_router/providers/: base.py  ollama_provider.py  openai_provider.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator/: main.py  state_machine.py
services/orchestrator/src/orchestrator/clients/: llm_router_client.py  retrieval_client.py  sandbox_client.py
services/orchestrator/src/orchestrator/pedagogy/: difficulty_step_down.py  fast_path_skip.py  goal_context_patch.py  prereq_detour.py  spaced_reinforcement.py
services/orchestrator/src/orchestrator/store/: cache.py  repository.py
services/retrieval/: Dockerfile  pyproject.toml
services/retrieval/src/retrieval/: embeddings.py  main.py  qdrant_client_wrapper.py
services/sandbox/: Dockerfile  Dockerfile.runner  pyproject.toml
services/sandbox/src/sandbox/: docker_runner.py  limits.py  main.py
