[project]
name = "learn-god-speed"
version = "0.1.0"
description = "AI-powered, goal-conditioned learning platform for software frameworks/libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["libs/shared", "services/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
