[project]
name = "lgs-shared"
version = "0.1.0"
description = "Shared Pydantic models and config helpers for Learn God Speed services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lgs_shared"]
