[project]
name = "api-gateway"
version = "0.1.0"
description = "FastAPI BFF — the only backend service the frontend talks to"
requires-python = ">=3.12"
dependencies = [
    "lgs-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
]

[tool.uv.sources]
lgs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]
