[project]
name = "doc-ingestion-worker"
version = "0.1.0"
description = "One-shot batch job: fetch -> validate -> chunk -> tag -> embed -> publish a framework's docs"
requires-python = ">=3.12"
dependencies = [
    "lgs-shared",
    "httpx>=0.28",
    "pyyaml>=6.0",
]

[tool.uv.sources]
lgs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_ingestion_worker"]
