[project]
name = "llm-router"
version = "0.1.0"
description = "Provider-agnostic LLM routing service: task_type -> provider/model, config-driven"
requires-python = ">=3.12"
dependencies = [
    "lgs-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "openai>=1.54",
]

[tool.uv.sources]
lgs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]
