[project]
name = "orchestrator"
version = "0.1.0"
description = "State machine + pedagogy rules: intake -> diagnostic -> syllabus -> lesson -> grading"
requires-python = ">=3.12"
dependencies = [
    "lgs-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[tool.uv.sources]
lgs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
