[project]
name = "retrieval"
version = "0.1.0"
description = "Vector retrieval service wrapping Qdrant: query() and upsert()"
requires-python = ">=3.12"
dependencies = [
    "lgs-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qdrant-client>=1.12",
    "httpx>=0.28",
]

[tool.uv.sources]
lgs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval"]
