[project]
name = "sandbox"
version = "0.1.0"
description = "Isolated code execution service: spins a throwaway container per submission"
requires-python = ">=3.12"
dependencies = [
    "lgs-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "docker>=7.1",
]

[tool.uv.sources]
lgs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox"]
